# OptSched

./: .clang-tidy  .envrc  .gitignore  BUILD.md  CMakeLists.txt  README-MacOS.md  README.md
.github/workflows/: build-extras-cpp-eventanalyze.yml  build-methods.yml  ccpp.yml  checks.yml  clangformat.yml  clangtidy.yml  llvm-versions.yml  runclangformat.yml  trailingwhitespace.yml  westconst.yml
cmake/: GetLocalLLVM.cmake
cmake/amdgpu-superbuild/: CMakeLists.txt
cmake/amdgpu-tblgen/: CMakeLists.txt
cmake/superbuild/: CMakeLists.txt  flang.cmake
docker/: Dockerfile
documentation/: amdgpu.md
documentation/flang/: README.md
documentation/lectures/: GraphTransformations.md
example/: helloworld.cpp  sched.ini
example/intel-x86-optsched-cfg/: hotfuncs.ini  machine_model.cfg  sched.ini
example/llvm7-CPU2006-cfg/: hotfuncs.ini  sched.ini
example/optsched-cfg/: hotfuncs.ini  occupancy_limits.ini  sched.ini
extras/analyze/: CMakeLists.txt
extras/analyze/include/: parse.hpp  py.hpp  types.hpp
extras/analyze/src/: module.cpp  parse.cpp  test.main.cpp  types.cpp
include/opt-sched/Scheduler/: .aco.h.swp  OptSchedDDGWrapperBase.h  OptSchedTarget.h  aco.h  arra_ref2d.h  array_list.h  array_ref2d.h  bb_spill.h  bit_vector.h  buffers.h  config.h  cuda_lnkd_lst.cuh  data_dep.h  defines.h  dev_defines.h  device_set.h  device_vector.h  enumerator.h  gen_sched.h  graph.h  graph_trans.h  graph_trans_ilp.h  graph_trans_ilp_occupancy_preserving.h  hash_table.h  hist_table.h  list_sched.h  lnkd_lst.h  logger.h  machine_model.h  mem_mngr.h  random.h  ready_list.h  reg_alloc.h  register.h  relaxed_sched.h  sched_basic_data.h  sched_region.h  simplified_aco_ds.h  stats.h  utilities.h
lib/: CMakeLists.txt
lib/Scheduler/: .aco.cpp.swp  LLVMBuild.txt  aco.cpp  aco.cu  aco.hip.cpp  bb_spill.cpp  bb_spill.cu  bb_spill.hip.cpp  buffers.cpp  config.cpp  cuda_bb_spill.cu  cuda_data_dep.cu  cuda_dev_defs_list_sched.cu  cuda_gen_sched.cu  cuda_graph.cu  cuda_list_sched.cu  cuda_lnkd_lst.cu  cuda_machine_model.cu  cuda_ready_list.cu  cuda_register.cu  cuda_sched_basic_data.cu  cuda_sched_region.cu  data_dep.cpp  data_dep.cu  data_dep.hip.cpp  enumerator.cpp  gen_sched.cpp  gen_sched.cu  gen_sched.hip.cpp  graph.cpp  graph.cu  graph.hip.cpp  graph_trans.cpp  graph_trans_ilp.cpp  graph_trans_ilp_occupancy_preserving.cpp  hist_table.cpp  list_sched.cpp  list_sched.hip.cpp  logger.cpp  machine_model.cpp  (+20 more)
lib/Wrapper/: .OptScheduler.h.swp  OptSchedDDGWrapperBasic.cpp  OptSchedDDGWrapperBasic.h  OptSchedDDGWrapperGCN.cpp  OptSchedDDGWrapperGCN.h  OptSchedDagWrapper.cpp  OptSchedDagWrapper.h  OptSchedGenericTarget.cpp  OptSchedMachineWrapper.cpp  OptSchedMachineWrapper.h  OptSchedReg.h  OptScheduler.cpp  OptScheduler.h  OptimizingScheduler.cpp  OptimizingScheduler.cu  OptimizingScheduler.h  OptimizingScheduler.hip.cpp  TwoPassScheduler.cpp  TwoPassScheduler.h
lib/Wrapper/AMDGPU/: GCNOptSched.cpp  GCNOptSched.h  GCNOptSchedReg.h  OptSchedDDGWrapperGCN.cpp  OptSchedDDGWrapperGCN.h  OptSchedGCNTarget.cpp  OptSchedGCNTarget.h
patches/ROCm/: load-plugins.patch
patches/amdgpu/: README.md  ROCm-2.4-LLVM-print-occupancy.patch  ROCm-2.4-load-optsched.patch
patches/llvm6.0/: README.md  flang-llvm6-print-spilling-info.patch  llvm6-print-spilling-info.patch
patches/llvm7.0/: README.md  flang-llvm7-print-spilling-info.patch
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Unit/: lit.cfg.py  lit.site.cfg.py.in
unittests/: CMakeLists.txt
unittests/Basic/: ArrayRef2DTest.cpp  CMakeLists.txt  ConfigTest.cpp  LinkedListTest.cpp  LoggerTest.cpp  UtilitiesTest.cpp  ddg.h  ddg_test.cpp  simple_machine_model.h  simple_machine_model_test.cpp
util/: BuildCopyToA7.sh  ExtractRunspecRunCMD.sh  comparePeaks.py  countNodes.py  rp_compare.py  runFilteredBlockTests.sh  runspec-wrapper-v9-chris.py  sched_som.py
util/ACO/: benchOccupancy.py  changeSched.sh  compareTwoRuns.py  extractOccupancy  extractOccupancy.py  extractOptSchedData.py  extractResults.py  kernelOccupancy.py  kernelTrace.py  medianCSV.py  runPrimTests.py  tempMonitor.py
util/ACO/testSets/: primSensitiveTests.txt
util/ARM/: gen-CPU2006-cross-ARM.py  run-CPU2006-cross-ARM.sh
util/CPU2006/: clean-compile-commands.py  combine-exec.py  runspec-wrapper-optsched.py  stats.py
util/SLIL/: compare-BB-fixed.py  compare-peaks.py  compare-static-LB.py  gather-SLIL-stats.py  run-filtered-block-tests.py  runspec-wrapper-SLIL.py
util/SPEC/: runspec-wrapper-optsched.py
util/aco_analysis/: make_pheremone_pdfs.sh  make_pheromone_pdfs.sh
util/analyze/: __init__.py  _cpp_types.py  _main.py  _types.py  _utils.py  analyzer.py  import_cpu2006.py  import_plaidml.py  import_shoc.py  import_utils.py  ioutils.py  logs.py  script.py  utils.py
util/analyze/imports/: __init__.py  import_cpu2006.py  import_plaidml.py  import_shoc.py  import_utils.py
util/analyze/lib/: block_stats.py  compile_times.py  find_negative_nodes_examined.py  func_stats.py
util/cpu2017/: buildspec  cpexecresults.sh  cplogs.sh  extract-benchs.sh  runspec
util/gt_analysis/: __init__.py  gt_cmp.py  gt_cmp_opt_only.py  gt_cost.py  plaidbench_gt_cost.py
util/misc/: clean-compile-commands.py  count-boundary-spills.py  count-nodes.py  ddg2dot.py  extract-script.py  find-negative-nodes-examined.py  findblock.py  func-stats.py  json2infolog.py  load_logs.py  merge-csv.py  raw-spill-counts.py  spill-compare.py  spill-count-csv.py  validation-test.py
util/plaidbench/: amdgpu-validation-test.py  extract-plaidbench-data.py  extract-shoc-data.py  get-benchmarks-stats.py  get-occupancy.py  get-optsched-stats.py  get-sched-length.py  plaidbench-validation-test.py  run-plaidbench.py  run-plaidbench.sh
util/readlogs/: __init__.py
util/runners/: __init__.py  datename  multirun.py  runwith.py  shocrunner.py
